Add instructions and update devcontainer: The updated devcontainer installs the Gradle for Java extension.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,5 +10,12 @@
             "installGradle": "true"
         }
     },
+    "customizations": {
+        "vscode": {
+            "extensions": [
+                "vscjava.vscode-gradle"
+            ]
+        }
+    },
     "postCreateCommand": "sh /usr/local/post-create-env.sh"
 }
