Cherry-pick 727ff08..3e8a642.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,5 +17,5 @@
             ]
         }
     },
-    "postCreateCommand": "sh /usr/local/post-create-env.sh"
+    "postCreateCommand": "sudo sh /usr/local/post-create-env.sh"
 }
