Manually trigger workflow.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ on:
   schedule:
     # Runs on the fifteenth day of September at 11:11 AM UTC.
     - cron: '11 11 15 9 *'
+  workflow_dispatch:
 
 jobs:
   build:
